Add a "a-needle-in-the-haystack" kata

--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
   </head>
   <body>
 <script src="./js/list-filtering.js" type="module"></script>
+<script src="./js/a-needle-in-the-haystack.js" type="module"></script>
   </body>
   </html>
