Add "Square every digit" kata add

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
   <body>
 <script src="./js/list-filtering.js" type="module"></script>
 <script src="./js/a-needle-in-the-haystack.js" type="module"></script>
+<script src="./js/square-every-digit.js" type="module"></script>
   </body>
   </html>
