add "Exes and Ohs" kata

--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
 <script src="./js/list-filtering.js" type="module"></script>
 <script src="./js/a-needle-in-the-haystack.js" type="module"></script>
 <script src="./js/square-every-digit.js" type="module"></script>
+<script src="./js/exes-and-ohs.js" type="module"></script>
   </body>
   </html>
