add sum-mixed-array kata

--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
     
   </head>
   <body>
-<script src="./js/list-filtering.js" type="module"></script>
+    <p> My 7kyu katas</p>
+<!-- <script src="./js/list-filtering.js" type="module"></script>
 <script src="./js/a-needle-in-the-haystack.js" type="module"></script>
 <script src="./js/square-every-digit.js" type="module"></script>
-<script src="./js/exes-and-ohs.js" type="module"></script>
+<script src="./js/exes-and-ohs.js" type="module"></script> -->
+<!-- <script src="./js/dna.js" type="module"></script> -->
+<script src="./js/sum-mixed-array.js" type="module"></script>
   </body>
   </html>
