add find-the-middle-element kata

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <script src="./js/square-every-digit.js" type="module"></script>
 <script src="./js/exes-and-ohs.js" type="module"></script> -->
 <!-- <script src="./js/dna.js" type="module"></script> -->
-<script src="./js/sum-mixed-array.js" type="module"></script>
+<!-- <script src="./js/sum-mixed-array.js" type="module"></script> -->
+<script src="./js/find-the-middle-element.js" type="module"></script>
   </body>
   </html>
