--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <script src="./js/exes-and-ohs.js" type="module"></script> -->
 <!-- <script src="./js/dna.js" type="module"></script> -->
 <!-- <script src="./js/sum-mixed-array.js" type="module"></script> -->
-<script src="./js/find-the-middle-element.js" type="module"></script>
+<!-- <script src="./js/find-the-middle-element.js" type="module"></script> -->
+<script src="./js/powers-of-2.js" type="module"></script>
   </body>
   </html>
