add n-th-power kata

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <!-- <script src="./js/dna.js" type="module"></script> -->
 <!-- <script src="./js/sum-mixed-array.js" type="module"></script> -->
 <!-- <script src="./js/find-the-middle-element.js" type="module"></script> -->
-<script src="./js/powers-of-2.js" type="module"></script>
+<!-- <script src="./js/powers-of-2.js" type="module"></script> -->
+<script src="./js/n-th-power.js" type="module"></script>
   </body>
   </html>
